--- a/app/globals.css
+++ b/app/globals.css
@@ -254,7 +254,7 @@ body {
 .cl-formButtonPrimary:hover,
 .cl-formButtonPrimary:focus,
 .cl-formButtonPrimary:active {
-  background-color: #705CF7
+  background-color: #38B6FF
 }
 
 /* ========================================== REACT-DATEPICKER STYLES */
@@ -270,11 +270,11 @@ body {
 }
 
 .react-datepicker__day--selected {
-  background-color: #624cf5 !important;
+  background-color: #38B6FF !important;
   color: #ffffff !important;
   border-radius: 4px;
 }
 
 .react-datepicker__time-list-item--selected {
-  background-color: #624cf5 !important;
+  background-color: #38B6FF !important;
 }
